@@ -61,7 +61,6 @@ Falls Sie die obige Installation nicht auf Ihrem Arbeitsrechner durchführen kö
 ### Local
 * Download executable artefact from resources
 * start executable java -jar org.javacream.training.rest.people.server-1.0.jar
-* Java 10+: java --add-modules java.xml.bind -jar org.javacream.training.rest.people.server-1.0.jar
 * web server will startup using port 8080 and embedded database
   * change port using --server.port=
 * browse to localhost:8080/people, you will see some data
